--- a/butts.html
+++ b/butts.html
@@ -1,7 +1,26 @@
 <html>
+<head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <style>
+        table {
+            font-family: 'Roboto', sans-serif;
+            text-align: center;
+            font-weight: 500;
+            line-height: 0.7;
+            font-size: 200%;
+        }
+
+        table td {
+            padding: 8px 15px;
+            /* transform: rotate(45deg); */
+        }
+    </style>
+</head>
 <body>
     <!-- butts-opera-april-reset-dress -->
-    <table style="font-family: sans-serif;text-align: center;font-weight: bold;line-height: 0.7;">
+    <table style="">
         <tbody id="the-thing">
         </tbody>
     </table>
@@ -11,7 +30,7 @@
             let tr = document.createElement("tr");
             word.split("").forEach(c => {
                 let td = document.createElement("td");
-                td.innerText = c.toUpperCase();
+                td.innerText = c;//.toUpperCase();
                 tr.appendChild(td);
             });
             the_thing.appendChild(tr);
