--- a/view.html
+++ b/view.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto-Mono:wght@500&display=swap" rel="stylesheet">
     <style>
         table {
-            font-family: 'Roboto Mono', sans-serif;
+            /*font-family: 'Roboto Mono', sans-serif;*/
             text-align: center;
             font-weight: 500;
             line-height: 0.7;
